# ai-video-creator

./: .gitignore  LICENSE.txt  README.md  config-example.json  config.py  main.py  prompts.py  pyproject.toml  requirements.txt  rough.py  search.py  tiktokvoice.py  utils.py  video.py
scripts/: download_music.py
